--- a/LogisticalRegression.ipynb
+++ b/LogisticalRegression.ipynb
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,22 +300,21 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 23,
-=======
-   "execution_count": 50,
->>>>>>> 64cf361fc5dfa89ec23cfc116c4129c638b56852
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:root:mymodel weights/guesses: ['-0.3358', '-0.0296', '0.0184', '-0.1197', '-0.1630', '-0.1256', '-0.0134', '-0.3249', '0.4313', '0.0146', '0.0108', '0.0108', '-0.0214', '-0.1282', '0.0163', '0.3231', '-0.0086', '0.1435', '0.2204', '0.0428', '...'] len 500\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
       "Training results: \n"
-=======
-      "ERROR:root:mymodel weights/guesses: ['-0.1770', '-0.2478', '-0.0418', '0.0168', '-0.1137', '-0.1550', '-0.0096', '-0.2135', '0.0143', '0.0156', '-1.1844', '0.0156', '0.2218', '-0.1891', '0.0151', '-0.0596', '-0.2198', '-0.0192', '0.1282', '0.1269', '...'] len 500\n"
->>>>>>> 64cf361fc5dfa89ec23cfc116c4129c638b56852
      ]
     },
     {
@@ -364,70 +363,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>word/feature</th>\n",
-       "      <td>1977</td>\n",
        "      <td>48</td>\n",
        "      <td>99999</td>\n",
        "      <td>addicted</td>\n",
        "      <td>adds</td>\n",
        "      <td>advertising</td>\n",
+       "      <td>advice</td>\n",
        "      <td>afternoon</td>\n",
-       "      <td>ago</td>\n",
+       "      <td>age</td>\n",
+       "      <td>ah</td>\n",
        "      <td>aha</td>\n",
        "      <td>aimin</td>\n",
-       "      <td>ain</td>\n",
        "      <td>ak</td>\n",
-       "      <td>amen</td>\n",
-       "      <td>america</td>\n",
+       "      <td>alike</td>\n",
+       "      <td>ambulance</td>\n",
        "      <td>american</td>\n",
+       "      <td>americano</td>\n",
        "      <td>ammunition</td>\n",
        "      <td>amp</td>\n",
-       "      <td>angels</td>\n",
+       "      <td>angel</td>\n",
        "      <td>animal</td>\n",
-       "      <td>apart</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>theta weight</th>\n",
-       "      <td>-1.3789</td>\n",
-       "      <td>0.7054</td>\n",
-       "      <td>0.3861</td>\n",
-       "      <td>0.7072</td>\n",
-       "      <td>-1.6613</td>\n",
-       "      <td>-4.9136</td>\n",
-       "      <td>-7.1018</td>\n",
-       "      <td>-4.5589</td>\n",
-       "      <td>-5.5129</td>\n",
-       "      <td>-1.6713</td>\n",
-       "      <td>7.2668</td>\n",
-       "      <td>5.9865</td>\n",
-       "      <td>-2.7832</td>\n",
-       "      <td>0.0083</td>\n",
-       "      <td>-12.0435</td>\n",
-       "      <td>0.8534</td>\n",
-       "      <td>-0.0279</td>\n",
-       "      <td>-8.3808</td>\n",
-       "      <td>-1.3681</td>\n",
-       "      <td>-4.6447</td>\n",
+       "      <td>1.7043</td>\n",
+       "      <td>18.4071</td>\n",
+       "      <td>4.7412</td>\n",
+       "      <td>-2.2775</td>\n",
+       "      <td>-1.7080</td>\n",
+       "      <td>0.1094</td>\n",
+       "      <td>-2.0786</td>\n",
+       "      <td>6.4986</td>\n",
+       "      <td>-3.9877</td>\n",
+       "      <td>0.6641</td>\n",
+       "      <td>4.9980</td>\n",
+       "      <td>8.5627</td>\n",
+       "      <td>29.9176</td>\n",
+       "      <td>5.8852</td>\n",
+       "      <td>0.5308</td>\n",
+       "      <td>-4.7816</td>\n",
+       "      <td>5.8859</td>\n",
+       "      <td>-0.8768</td>\n",
+       "      <td>21.9995</td>\n",
+       "      <td>-5.0091</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   0       1       2         3        4            5   \\\n",
-       "word/feature     1977      48   99999  addicted     adds  advertising   \n",
-       "theta weight  -1.3789  0.7054  0.3861    0.7072  -1.6613      -4.9136   \n",
+       "                  0        1         2        3            4       5   \\\n",
+       "word/feature      48    99999  addicted     adds  advertising  advice   \n",
+       "theta weight  1.7043  18.4071    4.7412  -2.2775      -1.7080  0.1094   \n",
        "\n",
-       "                     6        7        8        9       10      11       12  \\\n",
-       "word/feature  afternoon      ago      aha    aimin     ain      ak     amen   \n",
-       "theta weight    -7.1018  -4.5589  -5.5129  -1.6713  7.2668  5.9865  -2.7832   \n",
+       "                     6       7        8       9       10      11       12  \\\n",
+       "word/feature  afternoon     age       ah     aha   aimin      ak    alike   \n",
+       "theta weight    -2.0786  6.4986  -3.9877  0.6641  4.9980  8.5627  29.9176   \n",
        "\n",
-       "                   13        14          15       16       17       18  \\\n",
-       "word/feature  america  american  ammunition      amp   angels   animal   \n",
-       "theta weight   0.0083  -12.0435      0.8534  -0.0279  -8.3808  -1.3681   \n",
+       "                     13        14         15          16       17       18  \\\n",
+       "word/feature  ambulance  american  americano  ammunition      amp    angel   \n",
+       "theta weight     5.8852    0.5308    -4.7816      5.8859  -0.8768  21.9995   \n",
        "\n",
        "                   19  \n",
-       "word/feature    apart  \n",
-       "theta weight  -4.6447  "
+       "word/feature   animal  \n",
+       "theta weight  -5.0091  "
       ]
      },
      "metadata": {},
@@ -481,96 +480,96 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>raw h(x)</td>\n",
-       "      <td>-1.3789</td>\n",
-       "      <td>0.7054</td>\n",
-       "      <td>0.3861</td>\n",
-       "      <td>0.7072</td>\n",
-       "      <td>-1.6613</td>\n",
-       "      <td>-4.9136</td>\n",
-       "      <td>-7.1018</td>\n",
-       "      <td>-4.5589</td>\n",
-       "      <td>-5.5129</td>\n",
+       "      <td>1.7043</td>\n",
+       "      <td>18.4071</td>\n",
+       "      <td>4.7412</td>\n",
+       "      <td>-2.2775</td>\n",
+       "      <td>-1.7080</td>\n",
+       "      <td>0.1094</td>\n",
+       "      <td>-2.0786</td>\n",
+       "      <td>6.4986</td>\n",
+       "      <td>-3.9877</td>\n",
        "      <td>...</td>\n",
-       "      <td>5.9865</td>\n",
-       "      <td>-2.7832</td>\n",
-       "      <td>0.0083</td>\n",
-       "      <td>-12.0435</td>\n",
-       "      <td>0.8534</td>\n",
-       "      <td>-0.0279</td>\n",
-       "      <td>-8.3808</td>\n",
-       "      <td>-1.3681</td>\n",
-       "      <td>-4.6447</td>\n",
+       "      <td>8.5627</td>\n",
+       "      <td>29.9176</td>\n",
+       "      <td>5.8852</td>\n",
+       "      <td>0.5308</td>\n",
+       "      <td>-4.7816</td>\n",
+       "      <td>5.8859</td>\n",
+       "      <td>-0.8768</td>\n",
+       "      <td>21.9995</td>\n",
+       "      <td>-5.0091</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>sig g(h(x))</td>\n",
-       "      <td>0.2012</td>\n",
-       "      <td>0.6694</td>\n",
-       "      <td>0.5953</td>\n",
-       "      <td>0.6698</td>\n",
-       "      <td>0.1596</td>\n",
-       "      <td>0.0073</td>\n",
-       "      <td>0.0008</td>\n",
-       "      <td>0.0104</td>\n",
-       "      <td>0.0040</td>\n",
+       "      <td>0.8461</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.9913</td>\n",
+       "      <td>0.0930</td>\n",
+       "      <td>0.1534</td>\n",
+       "      <td>0.5273</td>\n",
+       "      <td>0.1112</td>\n",
+       "      <td>0.9985</td>\n",
+       "      <td>0.0182</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.9975</td>\n",
-       "      <td>0.0582</td>\n",
-       "      <td>0.5021</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.7013</td>\n",
-       "      <td>0.4930</td>\n",
-       "      <td>0.0002</td>\n",
-       "      <td>0.2029</td>\n",
-       "      <td>0.0095</td>\n",
+       "      <td>0.9998</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.9972</td>\n",
+       "      <td>0.6297</td>\n",
+       "      <td>0.0083</td>\n",
+       "      <td>0.9972</td>\n",
+       "      <td>0.2938</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0066</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>round g(h(x))</td>\n",
-       "      <td>0.0000</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>...</td>\n",
        "      <td>1.0000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1.0000</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
+       "      <td>1.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>h(x)-y</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>-1.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0000</td>\n",
-       "      <td>-1.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>-1.0000</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>-1.0000</td>\n",
-       "      <td>-1.0000</td>\n",
-       "      <td>-1.0000</td>\n",
+       "      <td>0.0000</td>\n",
        "      <td>0.0000</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
@@ -580,23 +579,23 @@
        "</div>"
       ],
       "text/plain": [
-       "           test#        0       1       2       3        4        5        6  \\\n",
-       "0       raw h(x)  -1.3789  0.7054  0.3861  0.7072  -1.6613  -4.9136  -7.1018   \n",
-       "1    sig g(h(x))   0.2012  0.6694  0.5953  0.6698   0.1596   0.0073   0.0008   \n",
-       "2  round g(h(x))   0.0000  1.0000  1.0000  1.0000   0.0000   0.0000   0.0000   \n",
-       "3         h(x)-y   0.0000  0.0000  0.0000  1.0000   0.0000   0.0000   0.0000   \n",
+       "           test#       0        1       2        3        4       5        6  \\\n",
+       "0       raw h(x)  1.7043  18.4071  4.7412  -2.2775  -1.7080  0.1094  -2.0786   \n",
+       "1    sig g(h(x))  0.8461   1.0000  0.9913   0.0930   0.1534  0.5273   0.1112   \n",
+       "2  round g(h(x))  1.0000   1.0000  1.0000   0.0000   0.0000  1.0000   0.0000   \n",
+       "3         h(x)-y  1.0000   0.0000  0.0000   0.0000   0.0000  1.0000   0.0000   \n",
        "\n",
-       "         7        8 ...       11       12      13        14      15       16  \\\n",
-       "0  -4.5589  -5.5129 ...   5.9865  -2.7832  0.0083  -12.0435  0.8534  -0.0279   \n",
-       "1   0.0104   0.0040 ...   0.9975   0.0582  0.5021    0.0000  0.7013   0.4930   \n",
-       "2   0.0000   0.0000 ...   1.0000   0.0000  1.0000    0.0000  1.0000   0.0000   \n",
-       "3  -1.0000   0.0000 ...   0.0000  -1.0000  0.0000   -1.0000  1.0000  -1.0000   \n",
+       "        7        8 ...       11       12      13      14       15      16  \\\n",
+       "0  6.4986  -3.9877 ...   8.5627  29.9176  5.8852  0.5308  -4.7816  5.8859   \n",
+       "1  0.9985   0.0182 ...   0.9998   1.0000  0.9972  0.6297   0.0083  0.9972   \n",
+       "2  1.0000   0.0000 ...   1.0000   1.0000  1.0000  1.0000   0.0000  1.0000   \n",
+       "3  0.0000   0.0000 ...   0.0000   0.0000  0.0000  0.0000   0.0000  0.0000   \n",
        "\n",
        "        17       18       19   20  \n",
-       "0  -8.3808  -1.3681  -4.6447  ...  \n",
-       "1   0.0002   0.2029   0.0095  ...  \n",
-       "2   0.0000   0.0000   0.0000  ...  \n",
-       "3  -1.0000  -1.0000   0.0000  ...  \n",
+       "0  -0.8768  21.9995  -5.0091  ...  \n",
+       "1   0.2938   1.0000   0.0066  ...  \n",
+       "2   0.0000   1.0000   0.0000  ...  \n",
+       "3  -1.0000   0.0000   0.0000  ...  \n",
        "\n",
        "[4 rows x 22 columns]"
       ]
@@ -608,19 +607,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-=======
-      "features: ['1977', '48', '99999', 'addicted', 'adds', 'advertising', 'afternoon', 'ago', 'aha', 'aimin', 'ain', 'ak', 'amen', 'america', 'american', 'ammunition', 'amp', 'angels', 'animal', 'apart', '...']\n",
       "\n",
-      "raw results ['-1.3789', '0.7054', '0.3861', '0.7072', '-1.6613', '-4.9136', '-7.1018', '-4.5589', '-5.5129', '-1.6713', '7.2668', '5.9865', '-2.7832', '0.0083', '-12.0435', '0.8534', '-0.0279', '-8.3808', '-1.3681', '-4.6447', '...'] \n",
-      "sig results ['0.2012', '0.6694', '0.5953', '0.6698', '0.1596', '0.0073', '0.0008', '0.0104', '0.0040', '0.1583', '0.9993', '0.9975', '0.0582', '0.5021', '0.0000', '0.7013', '0.4930', '0.0002', '0.2029', '0.0095', '...']\n",
-      "\n",
-      "0|1 results ['0.0000', '1.0000', '1.0000', '1.0000', '0.0000', '0.0000', '0.0000', '0.0000', '0.0000', '0.0000', '1.0000', '1.0000', '0.0000', '1.0000', '0.0000', '1.0000', '0.0000', '0.0000', '0.0000', '0.0000', '...']\n",
-      "\n",
-      "diff vs y ['0.0000', '0.0000', '0.0000', '1.0000', '0.0000', '0.0000', '0.0000', '-1.0000', '0.0000', '0.0000', '0.0000', '0.0000', '-1.0000', '0.0000', '-1.0000', '1.0000', '-1.0000', '-1.0000', '-1.0000', '0.0000', '...']\n",
->>>>>>> 64cf361fc5dfa89ec23cfc116c4129c638b56852
-      "\n",
-      " Total Test Results.  # Errors: 17.0 / 84 = 0.202381 error rate\n"
+      " Total Test Results.  # Errors: 16.0 / 84 = 0.190476 error rate\n"
      ]
     }
    ],
@@ -631,7 +619,7 @@
     "from gdsolvers import *\n",
     "log.getLogger().setLevel(log.ERROR)\n",
     "\n",
-    "xMatrix,yArr,features,fnames = fe.getGagaData(maxrows=300,stopwords='english')   # get all songs \n",
+    "xMatrix,yArr,features,fnames = fe.getGagaData(maxrows=300,stopwords='english')\n",
     "xMatrix,yArr = shuffle(xMatrix, random_state=0), shuffle(yArr, random_state=0)   # shuffle\n",
     "partition = int(.70*len(yArr))            \n",
     "trainingMatrix = xMatrix[:partition]     # 70% training\n",
@@ -644,10 +632,7 @@
     "Y = trainingY\n",
     "X,rfeatures = reduceFeatures(X, Y, features, 500)   # reduce features from 4000+ -> 500\n",
     "gs = grad_descent5(lambda y,x: sigmoid(x)-y,sigmoidCost,X,Y,step=0.1,step_limit=-1,loop_limit=1000)\n",
-<<<<<<< HEAD
-=======
     "log.error('mymodel weights/guesses: %s len %d'%(gf(gs), len(gs)))\n",
->>>>>>> 64cf361fc5dfa89ec23cfc116c4129c638b56852
     "\n",
     "## test the model\n",
     "df = pandas.DataFrame(testMatrix, columns=features)   # new df w/ column names\n",
@@ -656,9 +641,8 @@
     "testResSig = [sigmoid(x) for x in testRes]            # to sigmoid\n",
     "testResRound = [round(sigmoid(x),0) for x in testRes] # to rounded O|1\n",
     "testDiffs = np.array(testResRound) - np.array(testY)  # diff vs Y\n",
-<<<<<<< HEAD
     "\n",
-    "print 'Training results: '\n",
+    "print ('Training results: ')\n",
     "weightSample = pandas.DataFrame(rfeatures[:20], columns=['word/feature'])\n",
     "weightSample['theta weight'] = gf(testRes[:20])\n",
     "display(weightSample.transpose())\n",
@@ -668,14 +652,6 @@
     "display(testResults)     \n",
     "                                \n",
     "print('\\n Total Test Results.  # Errors: %s / %s = %f error rate'%(sum([abs(x) for x in testDiffs]),len(testY),sum([abs(x) for x in testDiffs])/len(testY)))\n"
-=======
-    "print ('features: %s'% [str(r) for r in rfeatures[0:20]+['...']])\n",
-    "print ('\\nraw results %s '%(gf(testRes)))\n",
-    "print ('sig results %s'%gf([sigmoid(x) for x in testRes]))\n",
-    "print ('\\n0|1 results %s'%gf([round(sigmoid(x)) for x in testRes]))\n",
-    "print ('\\ndiff vs y %s'%gf(testDiffs))\n",
-    "print('\\nmymodel errors: %s / %s = %f'%(sum([abs(x) for x in testDiffs]),len(testY),sum([abs(x) for x in testDiffs])/len(testY)))\n"
->>>>>>> 64cf361fc5dfa89ec23cfc116c4129c638b56852
    ]
   },
   {
@@ -751,21 +727,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
