--- a/Intro.ipynb
+++ b/Intro.ipynb
@@ -19,8 +19,19 @@
     "- Experience with Amazon's Sage Maker\n",
     "- Experience with Microsoft ML Studio\n",
     "- Experience with h2o.ai\n",
-    "\n",
     "- Real world problems to solve / experiement with\n",
+    "\n",
+    "Other key things I have been reading/watching:\n",
+    "- Lectures from folks like Ian Goodfellow and other Conference speakers\n",
+    "- Coursera's deeplearning.ai series (Andrew Ng's next courses)\n",
+    "- Various blogs on Medium and following some of the famous folks on Twitter like Jeff Dean\n",
+    "- Listening to Data Skeptic and ThisWeekInMachineLearningAndAI(TwimlAI) podcasts\n",
+    "- Random Youtube views not excluding Siraj Raval\n",
+    "\n",
+    "Things I haven't done, but am considering:\n",
+    "- Getting on Kaggle for a competition\n",
+    "- Starting a Blog\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -35,21 +46,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
