--- a/TensorFlow.ipynb
+++ b/TensorFlow.ipynb
@@ -500,11 +500,11 @@
     "\n",
     "### GPU note\n",
     "\n",
-    "I was curious when GPU are faster and since TF supports GPU I was excited.  I found a few things initially.\n",
+    "I was curious when GPU are faster and since TF supports GPU I was excited.  I found a few things with initial tests (using the default MNIST image database and default example of a 3-4 layer NN using TF):\n",
     "\n",
-    "- CPU without MMX is slow (no vector operations on matrix and BGD)\n",
-    "- CPU w/ MMX is faster (should measure if I can disable MMX somehow)\n",
-    "- GPU is not always faster (on basic MNIST NN image example it was ~8% faster)\n",
+    "- CPU without MMX is slow (no vector operations on matrix and BGD) - my Atom laptop\n",
+    "- CPU w/ MMX is faster (should measure if I can disable MMX somehow) - most laptops\n",
+    "- GPU is not always faster (on basic MNIST NN image example it was ~8% faster) - my 1050Ti\n",
     "\n",
     "To setup GPU:\n",
     "- Suggest setup a virtualenv of conda env, so you keep the env clean if you want to compare GPU vs non-GPU\n",
@@ -512,7 +512,7 @@
     "- Install CUDA drivers (9.0 in my case, its compiled for only this version in Windows)\n",
     "- Install Cuda NN DLL (7.1 - just copy DLL after installed to somewhere in path)\n",
     "\n",
-    "<B>Note my initial installs were screwed up.  I reinstalled tensorflow after installing CUDA and now its working.   I think using VirtualEnv or Conda Env or Docker would be cleaner.</B>\n",
+    "<B>Note my initial installs were screwed up.  I reinstalled tensorflow after installing CUDA and now its working.   I think using VirtualEnv or Conda Env or Docker would be cleaner.</B>   But now after installing these compatible CUDA drivers my NiceHash for mining is broken!\n",
     "\n",
     "\n",
     "\n"
