--- a/TensorFlow.ipynb
+++ b/TensorFlow.ipynb
@@ -95,7 +95,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Re-doing the Lady Gaga Classifier with TF\n",
+    "## Re-doing the Lady Gaga Classifier with a little bit of TF\n",
     "\n",
     "Here we go, adapted to solve our favorite dummy example"
    ]
@@ -498,6 +498,140 @@
     "\n",
     "-----\n",
     "\n",
+    "### Higher level TF API - tensorflow.estimator.DNNClassifer()\n",
+    "\n",
+    "TensorFlow also has higher level API's.  Its almost like 5 lines of code to use the DNNClassifer as per below:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                           file  \\\n",
+      "87                  thefame.txt   \n",
+      "74               iwontdance.txt   \n",
+      "244         dancinincircles.txt   \n",
+      "121  millionreasonsworktape.txt   \n",
+      "123          knowyourrights.txt   \n",
+      "\n",
+      "                                              sentence  gagaflag  \n",
+      "87   \\n\\nI can't help myself I'm addicted to a life...         1  \n",
+      "74   \\n\\nI won't dance, don't ask me\\nI won't dance...         1  \n",
+      "244  \\n\\nTap down those boots while I beat around\\n...         1  \n",
+      "121  \\n\\nYou're giving me a million reasons to let ...         1  \n",
+      "123  \\n\\nThis is a public service announcement\\nWit...         0  \n",
+      "INFO:tensorflow:Using default config.\n",
+      "INFO:tensorflow:Using config: {'_model_dir': 'tf_logs/', '_tf_random_seed': None, '_save_summary_steps': 100, '_save_checkpoints_steps': None, '_save_checkpoints_secs': 600, '_session_config': None, '_keep_checkpoint_max': 5, '_keep_checkpoint_every_n_hours': 10000, '_log_step_count_steps': 100, '_train_distribute': None, '_service': None, '_cluster_spec': <tensorflow.python.training.server_lib.ClusterSpec object at 0x10fd21b38>, '_task_type': 'worker', '_task_id': 0, '_global_id_in_cluster': 0, '_master': '', '_evaluation_master': '', '_is_chief': True, '_num_ps_replicas': 0, '_num_worker_replicas': 1}\n",
+      "INFO:tensorflow:Calling model_fn.\n",
+      "INFO:tensorflow:Initialize variable dnn/input_from_feature_columns/input_layer/sentence_hub_module_embedding/module/embeddings/part_0:0 from checkpoint b'/var/folders/z5/r3lc8_5n7klgg7d5z_tb9sgw0000gn/T/tfhub_modules/32f2b2259e1cc8ca58c876921748361283e73997/variables/variables' with embeddings\n",
+      "INFO:tensorflow:Done calling model_fn.\n",
+      "INFO:tensorflow:Create CheckpointSaverHook.\n",
+      "INFO:tensorflow:Graph was finalized.\n",
+      "INFO:tensorflow:Running local_init_op.\n",
+      "INFO:tensorflow:Done running local_init_op.\n",
+      "INFO:tensorflow:Saving checkpoints for 1 into tf_logs/model.ckpt.\n",
+      "INFO:tensorflow:loss = 90.13321, step = 1\n",
+      "INFO:tensorflow:global_step/sec: 78.8134\n",
+      "INFO:tensorflow:loss = 15.260078, step = 101 (1.270 sec)\n",
+      "INFO:tensorflow:global_step/sec: 86.8406\n",
+      "INFO:tensorflow:loss = 8.458542, step = 201 (1.152 sec)\n",
+      "INFO:tensorflow:global_step/sec: 85.757\n",
+      "INFO:tensorflow:loss = 4.0069027, step = 301 (1.166 sec)\n",
+      "INFO:tensorflow:global_step/sec: 87.1712\n",
+      "INFO:tensorflow:loss = 1.7835387, step = 401 (1.147 sec)\n",
+      "INFO:tensorflow:global_step/sec: 86.4152\n",
+      "INFO:tensorflow:loss = 1.0410707, step = 501 (1.157 sec)\n",
+      "INFO:tensorflow:global_step/sec: 83.7021\n",
+      "INFO:tensorflow:loss = 0.9165466, step = 601 (1.195 sec)\n",
+      "INFO:tensorflow:global_step/sec: 88.2461\n",
+      "INFO:tensorflow:loss = 0.7028922, step = 701 (1.133 sec)\n",
+      "INFO:tensorflow:global_step/sec: 88.2631\n",
+      "INFO:tensorflow:loss = 0.6447315, step = 801 (1.133 sec)\n",
+      "INFO:tensorflow:global_step/sec: 85.5218\n",
+      "INFO:tensorflow:loss = 0.40475884, step = 901 (1.169 sec)\n",
+      "INFO:tensorflow:Saving checkpoints for 1000 into tf_logs/model.ckpt.\n",
+      "INFO:tensorflow:Loss for final step: 0.44491965.\n",
+      "INFO:tensorflow:Calling model_fn.\n",
+      "INFO:tensorflow:Initialize variable dnn/input_from_feature_columns/input_layer/sentence_hub_module_embedding/module/embeddings/part_0:0 from checkpoint b'/var/folders/z5/r3lc8_5n7klgg7d5z_tb9sgw0000gn/T/tfhub_modules/32f2b2259e1cc8ca58c876921748361283e73997/variables/variables' with embeddings\n",
+      "WARNING:tensorflow:Trapezoidal rule is known to produce incorrect PR-AUCs; please switch to \"careful_interpolation\" instead.\n",
+      "WARNING:tensorflow:Trapezoidal rule is known to produce incorrect PR-AUCs; please switch to \"careful_interpolation\" instead.\n",
+      "INFO:tensorflow:Done calling model_fn.\n",
+      "INFO:tensorflow:Starting evaluation at 2018-05-24-00:17:44\n",
+      "INFO:tensorflow:Graph was finalized.\n",
+      "INFO:tensorflow:Restoring parameters from tf_logs/model.ckpt-1000\n",
+      "INFO:tensorflow:Running local_init_op.\n",
+      "INFO:tensorflow:Done running local_init_op.\n",
+      "INFO:tensorflow:Finished evaluation at 2018-05-24-00:17:47\n",
+      "INFO:tensorflow:Saving dict for global step 1000: accuracy = 1.0, accuracy_baseline = 0.588, auc = 1.0, auc_precision_recall = 1.0, average_loss = 0.0028028798, global_step = 1000, label/mean = 0.588, loss = 0.35035998, precision = 1.0, prediction/mean = 0.5882406, recall = 1.0\n",
+      "INFO:tensorflow:Calling model_fn.\n",
+      "INFO:tensorflow:Initialize variable dnn/input_from_feature_columns/input_layer/sentence_hub_module_embedding/module/embeddings/part_0:0 from checkpoint b'/var/folders/z5/r3lc8_5n7klgg7d5z_tb9sgw0000gn/T/tfhub_modules/32f2b2259e1cc8ca58c876921748361283e73997/variables/variables' with embeddings\n",
+      "WARNING:tensorflow:Trapezoidal rule is known to produce incorrect PR-AUCs; please switch to \"careful_interpolation\" instead.\n",
+      "WARNING:tensorflow:Trapezoidal rule is known to produce incorrect PR-AUCs; please switch to \"careful_interpolation\" instead.\n",
+      "INFO:tensorflow:Done calling model_fn.\n",
+      "INFO:tensorflow:Starting evaluation at 2018-05-24-00:17:48\n",
+      "INFO:tensorflow:Graph was finalized.\n",
+      "INFO:tensorflow:Restoring parameters from tf_logs/model.ckpt-1000\n",
+      "INFO:tensorflow:Running local_init_op.\n",
+      "INFO:tensorflow:Done running local_init_op.\n",
+      "INFO:tensorflow:Finished evaluation at 2018-05-24-00:17:50\n",
+      "INFO:tensorflow:Saving dict for global step 1000: accuracy = 0.8727273, accuracy_baseline = 0.5272727, auc = 0.9429709, auc_precision_recall = 0.9608737, average_loss = 0.44526142, global_step = 1000, label/mean = 0.5272727, loss = 24.489378, precision = 0.89285713, prediction/mean = 0.51017034, recall = 0.86206895\n",
+      "Training set accuracy: 1.0\n",
+      "Test set accuracy: 0.8727272748947144\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorGaga import get_gaga_as_pandas_datasets\n",
+    "\n",
+    "tf.logging.set_verbosity(tf.logging.INFO)\n",
+    "tf.reset_default_graph()\n",
+    "\n",
+    "train_df, test_df = get_gaga_as_pandas_datasets()\n",
+    "print(train_df.head())\n",
+    "\n",
+    "# Training input on the whole training set with no limit on training epochs. (train)\n",
+    "# test w/ training data (verify).  test w/ test data (test)\n",
+    "train_input_fn = tf.estimator.inputs.pandas_input_fn(train_df, train_df[\"gagaflag\"], num_epochs=None, shuffle=True)\n",
+    "predict_train_input_fn = tf.estimator.inputs.pandas_input_fn(train_df, train_df[\"gagaflag\"], shuffle=False)\n",
+    "predict_test_input_fn = tf.estimator.inputs.pandas_input_fn(test_df, test_df[\"gagaflag\"], shuffle=False)\n",
+    "\n",
+    "# hmm not sure what this does exactly...\n",
+    "import tensorflow_hub as hub\n",
+    "embedded_text_feature_column = hub.text_embedding_column(\n",
+    "    key=\"sentence\", module_spec=\"https://tfhub.dev/google/nnlm-en-dim128/1\")\n",
+    "\n",
+    "estimator = tf.estimator.DNNClassifier(\n",
+    "    hidden_units=[500, 100],\n",
+    "    feature_columns=[embedded_text_feature_column],\n",
+    "    model_dir=\"tf_logs/\", n_classes=2,\n",
+    "    optimizer=tf.train.AdagradOptimizer(learning_rate=0.003))\n",
+    "\n",
+    "estimator.train(input_fn=train_input_fn, steps=1000)\n",
+    "\n",
+    "train_eval_result = estimator.evaluate(input_fn=predict_train_input_fn)  # expect 1.0\n",
+    "test_eval_result = estimator.evaluate(input_fn=predict_test_input_fn)    # expect ~ .80\n",
+    "\n",
+    "print (\"Training set accuracy: {accuracy}\".format(**train_eval_result))\n",
+    "print (\"Test set accuracy: {accuracy}\".format(**test_eval_result))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<B>Amazing !!!</B>   \n",
+    "\n",
+    "The above example & output shows how easy (but opaque) it is to use a builtin DeepNeuralNetClassifier (DNNClassifer).  You hardly have to do any coding and it works just as well (better) than a hand built classifier.\n",
+    "\n",
+    "----\n",
+    "\n",
+    "\n",
     "### GPU note\n",
     "\n",
     "I was curious when GPU are faster and since TF supports GPU I was excited.  I found a few things with initial tests (using the default MNIST image database and default example of a 3-4 layer NN using TF):\n",
@@ -512,10 +646,7 @@
     "- Install CUDA drivers (9.0 in my case, its compiled for only this version in Windows)\n",
     "- Install Cuda NN DLL (7.1 - just copy DLL after installed to somewhere in path)\n",
     "\n",
-    "<B>Note my initial installs were screwed up.  I reinstalled tensorflow after installing CUDA and now its working.   I think using VirtualEnv or Conda Env or Docker would be cleaner.</B>   But now after installing these compatible CUDA drivers my NiceHash for mining is broken!\n",
-    "\n",
-    "\n",
-    "\n"
+    "<B>Note my initial installs were screwed up.  I reinstalled tensorflow after installing CUDA and now its working.   I think using VirtualEnv or Conda Env or Docker would be cleaner.</B>   But now after installing these compatible CUDA drivers my NiceHash for mining is broken!\n"
    ]
   },
   {
